--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -1,160 +1,255 @@
-/*****************************************************************************/
-/*
-/* Common
-/*
-/*****************************************************************************/
+@import 'fonts.scss';
+@import 'variables.scss';
 
-/* Global Reset */
+@import 'homepage.scss';
+
+
 * {
   margin: 0;
   padding: 0;
 }
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+}
 
 body {
-  background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
+  background: white url('../images/site_background.jpg') no-repeat center top;
+  background-size: 100%;
+  overflow-x: hidden;
+  font: 14px open_sansregular;
   font-size: small;
   text-align: center;
+  color: $darkgray;
+  padding: 0 20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; }
-
-h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
-
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
-
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
-.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
+  font-size: 100%;
+  text-transform: uppercase;
 }
 
-.posts li {
-  line-height: 1.75em;
+p {
+  margin: 0;
 }
 
-.posts span {
-  color: #aaa;
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 80%;
+a, a:hover, a:visited {
+  color: $lightBlue;
 }
 
-/*****************************************************************************/
-/*
-/* Site
-/*
-/*****************************************************************************/
-
-.site {
-  font-size: 115%;
-  text-align: justify;
-  width: 42em;
-  margin: 3em auto 2em;
-  line-height: 1.5em;
-}
-
-.header a {
-  font-weight: bold;
+a {
   text-decoration: none;
 }
 
-.title {
-  display: inline-block;
-  margin-bottom: 2em;
-}
+.wrapper {
+  max-width: 950px;
+  margin: 17px auto 14px;
+  line-height: 1.7em;
 
-.title a {
-  color: #a00;
-}
+  header {
 
-.title a:hover {
-  color: #000;
-}
+    a {
+      color: $darkgray;
 
-.header a.extra {
-  color: #aaa;
-  margin-left: 1em;
-}
+      &:hover {
+        color: $lightBlue;
+      }
+    }
 
-.header a.extra:hover {
-  color: #000;
-}
+    .top-navigation {
+      margin-bottom: 16px;
+      font-family: bell_mtbold;
 
-.meta {
-  color: #aaa;
-}
+      li {
 
-.footer {
-  font-size: 80%;
-  color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
-  overflow: hidden;
-}
+        &:after {
+          content: '.';
+          margin-left: 16px;
+        }
 
-.footer .contact {
-  float: left;
-  margin-right: 3em;
-}
+        &.last, &.search {
+          &:after {
+            content: none;
+          }
+        }
 
-.footer .contact a {
-  color: #8085C1;
-}
+        &:first-child {
+          margin-left: 0;
+        }
 
-.footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
-}
+        margin-left: 11px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        vertical-align: middle;
 
-.footer .rss img {
-  border: 0;
-}
+        &.search {
+          margin-left: 15px;
+          margin-top: 4px;
 
-/*****************************************************************************/
-/*
-/* Posts
-/*
-/*****************************************************************************/
+          a {
+            width: 30px;
+            height: 30px;
+            background: url('../images/top_search.png') no-repeat center bottom;
+            display: inline-block;
+          }
+        }
+      }
+    }
 
-/* standard */
-.post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
-}
+    .site-name {
+      font-family: bell_mtbold;
+      font-size: 64px;
+      font-weight: bold;
+      line-height: 1;
+      margin-bottom: 6px;
+      letter-spacing: 10.3px;
 
-.post ul, .post ol {
-  margin-left: 1.35em;
-}
+      a, a:hover {
+        color: $darkgray;
+      }
 
-.post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .2em;
-}
+      a span {
+        font-size: 35px;
+        display: block;
+        text-transform: none;
+        letter-spacing: 11.2px;
+      }
 
-.post pre code {
-  border: none;
-}
+      @media (max-width: 400px) {
+        font-size: 35px;
 
-/* terminal */
-.post pre.terminal {
-  border: 1px solid #000;
-  background-color: #333;
-  color: #FFF;
-}
+        a span {
+          font-size: 15px;
+          letter-spacing: 9.5px;
+        }
+      }
+    }
 
-.post pre.terminal code {
-  background-color: #333;
+    hr {
+      width: 17%;
+      height: 4px;
+      background-color: $darkgray;
+      margin: 0 auto 33px;
+      border: none;
+    }
+  }
+
+  .nav-bar li {
+    display: inline-block;
+  }
+
+  footer {
+    overflow: hidden;
+
+    .icons-nav {
+      font-family: bell_mtbold;
+      border-bottom: 1px solid #817f7a;
+      padding-bottom: 35px;
+
+      li {
+        width: 165px;
+        padding-right: 28px;
+        background: url('../images/bullet.png') no-repeat right 10px top 28px ;
+
+        @media (max-width: 750px) {
+          width: 45%;
+          background: none;
+          padding: 0;
+          margin-bottom: 30px;
+        }
+
+        @media (max-width: 400px) {
+          width: 100%;
+        }
+
+        &.last {
+          padding-right: 0;
+          background: none;
+        }
+
+        a {
+          display: block;
+          color: $darkgray;
+
+          .icon {
+            display: block;
+            background: url('../images/sprites.png') no-repeat;
+            margin: 0 auto;
+            height: 37px;
+          }
+
+          &:hover {
+            span {
+              color: $lightBlue;
+            }
+
+            .icon {
+              height: 37px;
+
+              &.books {
+                background-position: 0 -50px;
+              }
+
+              &.digital-books {
+                background-position: -50px -50px;
+              }
+
+              &.people {
+                background-position: -100px -50px;
+              }
+
+              &.places {
+                background-position: -150px -50px;
+              }
+            }
+          }
+        }
+      }
+
+      .icon-text {
+        display: inline-block;
+        margin-top: 13px;
+        letter-spacing: -0.2px;
+      }
+
+      .books-icon .icon {
+        background-position: 0 0;
+        width: 28px;
+      }
+
+      .digital-books-icon .icon {
+        background-position: -50px 0;
+        width: 28px;
+      }
+
+      .people-icon .icon {
+        background-position: -100px 0;
+        width: 36px;
+      }
+
+      .places-icon .icon {
+        background-position: -150px 0;
+        width: 23px;
+      }
+
+    }
+
+    .login-area {
+      padding-top: 6px;
+
+
+      a {
+        color: $lightBlue;
+        font: 15px bell_mtbold;
+        letter-spacing: -0.5px;
+
+        &:before,
+        &:after {
+          padding: 0 13px;
+          content: '+';
+          font-size: 12px;
+        }
+      }
+    }
+  }
 }
