--- a/jekyll/app/_scss/_singlebook.scss
+++ b/jekyll/app/_scss/_singlebook.scss
@@ -43,9 +43,14 @@
         .title {
           font-size: 31px;
           font-weight: normal;
-          line-height: 1.06;
+          line-height: 1.07;
           text-transform: uppercase;
-          margin-bottom: 10px;
+          margin-bottom: 9px;
+          letter-spacing: -0.4px;
+        }
+
+        .field {
+          line-height: 2.3;
         }
 
 
@@ -57,15 +62,15 @@
 
         .field-label {
           display: inline-block;
-          font-size: 16px;
 
           &.type-label {
-            font-size: 18px;
+            font-size: 16px;
           }
         }
 
         .content {
           display: inline-block;
+          font-weight: bold;
         }
       }
 
