--- a/jekyll/app/_scss/_singlebook.scss
+++ b/jekyll/app/_scss/_singlebook.scss
@@ -21,7 +21,7 @@
     }
 
     .hr-title {
-      margin: 14px 0 62px;
+      margin: 13px 0 62px;
       font-size: 24px;
       letter-spacing: 2px;
 
@@ -45,12 +45,13 @@
           font-weight: normal;
           line-height: 1.07;
           text-transform: uppercase;
-          margin-bottom: 9px;
+          margin-bottom: 12px;
           letter-spacing: -0.4px;
         }
 
         .field {
-          line-height: 2.3;
+          line-height: 2.31;
+          letter-spacing: 0.4px;
         }
 
 
@@ -58,13 +59,15 @@
 
       .field{
         clear: both;
-        line-height: 1.84;
+        line-height: 2.2;
+        letter-spacing: 0.1px;
 
         .field-label {
           display: inline-block;
 
           &.type-label {
             font-size: 16px;
+            line-height: 1.2;
           }
         }
 
@@ -103,10 +106,15 @@
 
             a {
               color: $darkgray;
-              font-size: 20px;
+              font-size: 19px;
             }
           }
         }
+
+        /*&:before {
+          content: "<";
+          font-weight: bold;
+        }*/
 
       }
 
@@ -114,7 +122,7 @@
 
         clear: both;
         border-top: 1px solid $darkgray;
-        padding: 7px 21px 4px;
+        padding: 7px 21px 2px;
         margin-top: 55px;
 
         .fields-group-name {
@@ -132,7 +140,7 @@
           display: inline-block;
           width: 60%;
           margin-top: -4px;
-          font-size: 16px;
+          font-size: 14px;
 
           .content {
             font-weight: bold;
@@ -142,51 +150,7 @@
     }
 
     footer {
-      margin-top: 20px;
-
-      .bottom-nav {
-
-        ul {
-          padding-top: 25px;
-        }
-
-        li {
-          float: left;
-          padding: 0px 23px 0px 0px;
-
-          &:after {
-            content: '.';
-            /*font-size: 50px;*/
-            font-weight: bold;
-            vertical-align: bottom;
-            padding-left: 23px;
-            color: $lightBlue;
-          }
-
-          &.last:after {
-            content: '';
-            padding-left: 0;
-          }
-
-          &.first {
-            padding-left: 23px;
-          }
-        }
-
-        &:before,
-        &:after {
-          margin-top: 25px;
-          padding: 0;
-        }
-
-        &:before {
-          float: left;
-        }
-
-        &:after {
-          float: right;
-        }
-      }
+      margin-top: 22px;
     }
   }
 }
