--- a/jekyll/app/_includes/header.html
+++ b/jekyll/app/_includes/header.html
@@ -2,9 +2,9 @@
   <ul>
     <li class="first"><a href="#">Books</a></li>
     <li><a href="#">People</a></li>
-    <li class="last"><a href="#">Places</a></li>
-    <li class="search"><a href="#"></a></li>
+    <li><a href="#">Places</a></li>
+    <li class="last"><a href="search">search</a></li>
   </ul>
 </nav>
-<h1 class="site-name"><a href="/"><span>Library of the</span> Haskala</a></h1>
+<h1 class="site-name"><a href="/"><!--<span>Library of the</span>--> Haskala</a></h1>
 <hr>
