--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -51,6 +51,16 @@ a, a:hover, a:visited {
   text-decoration: none;
 }
 
+/* reset bootstrap */
+
+*, *:before, *:after {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
+/* reset bootstrap */
+
 .wrapper {
   max-width: 950px;
   margin: 17px auto 14px;
@@ -208,66 +218,68 @@ a, a:hover, a:visited {
         a {
           display: block;
           color: $darkgray;
+          display: inline-block;
+          letter-spacing: -0.2px;
+          padding: 0;
 
-          .icon {
+          &:before {
+            content: '';
             display: block;
             background: url('../images/sprites.png') no-repeat;
-            margin: 0 auto;
             height: 37px;
+            margin: 0px auto 13px;
           }
 
           &:hover {
-            span {
-              color: $lightBlue;
-            }
-
-            .icon {
-              height: 37px;
-
-              &.books {
-                background-position: 0 -50px;
-              }
-
-              &.digital-books {
-                background-position: -50px -50px;
-              }
-
-              &.people {
-                background-position: -100px -50px;
-              }
-
-              &.places {
-                background-position: -150px -50px;
-              }
-            }
+            color: $lightBlue;
+            background-color: transparent;
           }
         }
-      }
 
-      .icon-text {
-        display: inline-block;
-        margin-top: 13px;
-        letter-spacing: -0.2px;
-      }
+        &.first a {
 
-      .books-icon .icon {
-        background-position: 0 0;
-        width: 28px;
-      }
+          &:before {
+            background-position: 0 0;
+            width: 28px;
+          }
 
-      .digital-books-icon .icon {
-        background-position: -50px 0;
-        width: 28px;
-      }
+          &:hover:before {
+            background-position: 0 -50px;
+          }
+        }
 
-      .people-icon .icon {
-        background-position: -100px 0;
-        width: 36px;
-      }
+        &:nth-child(2) a {
+          &:before {
+            background-position: -50px 0;
+            width: 28px;
+          }
 
-      .places-icon .icon {
-        background-position: -150px 0;
-        width: 23px;
+          &:hover:before {
+            background-position: -50px -50px;
+          }
+        }
+
+        &:nth-child(3) a {
+          &:before {
+            background-position: -100px 0;
+            width: 36px;
+          }
+
+          &:hover:before {
+            background-position: -100px -50px;
+          }
+        }
+
+        &.last a {
+          &:before {
+            background-position: -150px 0;
+            width: 23px;
+          }
+
+          &:hover:before {
+            background-position: -150px -50px;
+          }
+        }
       }
 
     }
