#15: Single book markup

--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -27,7 +27,13 @@
       </li>
     </ul>
   </nav>
-  <div class="login-area">
-    <a href="/user/login">LOGIN</a>
-  </div>
+
+  <nav class="bottom-nav">
+    <ul>
+      <li class="first"><a href="#">Add a book</a></li>
+      <li><a href="#">Add a book series</a></li>
+      <li class="last"><a href="#">Add a person</a></li>
+    </ul>
+  </nav>
+
 </footer>
