--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -1,8 +1,9 @@
 @import 'fonts.scss';
 @import 'variables.scss';
 
+@import 'book';
+@import 'books';
 @import 'homepage.scss';
-@import 'singlebook';
 
 * {
   margin: 0;
