--- a/jekyll/app/_scss/_fonts.scss
+++ b/jekyll/app/_scss/_fonts.scss
@@ -22,3 +22,14 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Alef';
+  src: url('../fonts/Alef-Bold.eot');
+  src: url('../fonts/Alef-Bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Alef-Bold.woff') format('woff'),
+  url('../fonts/Alef-Bold.ttf') format('truetype'),
+  url('../fonts/Alef-Bold.svg#alefbold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
