Enabling theme on install + Various cleanups

--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -16,7 +16,7 @@ html, body {
 
 body {
   background: white url('../images/site_background.jpg') no-repeat center top;
-  /*background-size: 100%;*/
+  background-size: 100%;
   overflow-x: hidden;
   font: 14px open_sansregular;
   font-size: small;
