Transperent color link

--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -98,7 +98,7 @@ a, a:hover, a:visited {
             height: 30px;
             background: url('../images/top_search.png') no-repeat center bottom;
             display: inline-block;
-            text-indent: 10000px;
+            color: transparent;
           }
         }
       }
