#22: Homepage css fixes

--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -1,30 +1,9 @@
 <footer>
   <nav class="icons-nav nav-bar">
-    <ul>
-      <li class="books-icon">
-        <a href="#">
-          <span class="icon books"></span>
-          <span class="icon-text">BOOKS</span>
-        </a>
-      </li>
-      <li class="digital-books-icon">
-        <a href="#">
-          <span class="icon digital-books"></span>
-          <span class="icon-text">DIGITAL BOOKS</span>
-        </a>
-      </li>
-      <li class="people-icon">
-        <a href="#">
-          <span class="icon people"></span>
-          <span class="icon-text">PEOPLE</span>
-        </a>
-      </li>
-      <li class="places-icon last">
-        <a href="#">
-          <span class="icon places"></span>
-          <span class="icon-text">PLACES</span>
-        </a>
-      </li>
+    <ul class="menu nav"><li class="first leaf active"><a href="" title="" class="active">BOOKS</a></li>
+      <li class="leaf active"><a href="" title="" class="active">DIGITAL BOOKS</a></li>
+      <li class="leaf active"><a href="" title="" class="active">PEOPLE</a></li>
+      <li class="last leaf active"><a href="" title="" class="active">PLACES</a></li>
     </ul>
   </nav>
 
