Fix the home page design.

--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -9,10 +9,10 @@
 
   <nav class="bottom-nav">
     <ul>
-      <li class="first"><a href="#">Add a book</a></li>
-      <li><a href="#">Add a book series</a></li>
-      <li class="last"><a href="#">Add a person</a></li>
+      <!--<li class="first"><a href="#">Add a book</a></li>-->
+      <!--<li><a href="#">Add a book series</a></li>-->
+      <!--<li class="last"><a href="#">Add a person</a></li>-->
+      <li class="first last login"><a href="#">LOGIN</a></li>
     </ul>
   </nav>
-
 </footer>
