--- a/jekyll/app/_includes/header.html
+++ b/jekyll/app/_includes/header.html
@@ -3,8 +3,8 @@
     <ul>
       <li class="first"><a href="#">Books</a></li>
       <li><a href="#">People</a></li>
-      <li class="last"><a href="#">Places</a></li>
-      <li class="search"><a href="#"></a></li>
+      <li><a href="#">Places</a></li>
+      <li class="search last"><a href="#"></a></li>
     </ul>
   </nav>
 
