--- a/jekyll/app/_includes/header.html
+++ b/jekyll/app/_includes/header.html
@@ -9,6 +9,7 @@
   </nav>
 
   <h1 class="site-name"><a href="/"><span>Library of the</span> Haskala</a></h1>
+  <h1 class="site-name"><a href="/">Haskala</a></h1>
 
   <hr>
 
