--- a/jekyll/app/_scss/_homepage.scss
+++ b/jekyll/app/_scss/_homepage.scss
@@ -7,8 +7,9 @@
 
   .main-content {
     font-weight: bold;
-    letter-spacing: -0.4px;
+    letter-spacing: 0.6px;
     margin-bottom: 36px;
+    margin-left: 1px;
   }
 
   .search {
@@ -72,13 +73,15 @@
   }
 
   .tags-cloud-wrapper {
-    margin-top: 45px;
-    margin-bottom: 77px;
+    margin-top: 44px;
+    margin-bottom: 78px;
 
     h3 {
       color: $lightBlue;
       font-family: bell_mtbold;
       font-weight: bold;
+      margin-right: 4px;
+      letter-spacing: 0.9px;
 
       &:before,
       &:after {
