Fix the home page design

--- a/jekyll/app/_scss/main.scss
+++ b/jekyll/app/_scss/main.scss
@@ -65,6 +65,7 @@ a, a:hover, a:visited {
 
     .top-navigation {
       margin-bottom: 16px;
+      margin-right: 34px;
       font-family: bell_mtbold;
 
       li {
@@ -110,7 +111,8 @@ a, a:hover, a:visited {
       font-weight: bold;
       line-height: 1;
       margin-bottom: 6px;
-      letter-spacing: 10.3px;
+      margin-left: 5px;
+      letter-spacing: 11.3px;
 
       a, a:hover {
         color: $darkgray;
@@ -137,11 +139,14 @@ a, a:hover, a:visited {
       width: 17%;
       height: 4px;
       background-color: $darkgray;
-      margin: 0 auto 33px;
+      margin: 0 auto 32px;
       border: none;
     }
   }
 
+  section.search {
+    padding-right: 3px;
+  }
   .nav-bar li {
     display: inline-block;
   }
@@ -177,12 +182,12 @@ a, a:hover, a:visited {
     .icons-nav {
       font-family: bell_mtbold;
       border-bottom: 1px solid #817f7a;
-      padding-bottom: 35px;
+      padding-bottom: 33px;
 
       li {
         width: 165px;
-        padding-right: 28px;
-        background: url('../images/bullet.png') no-repeat right 10px top 28px ;
+        padding-right: 27px;
+        background: url('../images/bullet.png') no-repeat right 10px top 25px ;
 
         @media (max-width: 750px) {
           width: 45%;
@@ -201,18 +206,18 @@ a, a:hover, a:visited {
         }
 
         a {
-          display: block;
           color: $darkgray;
           display: inline-block;
           letter-spacing: -0.2px;
           padding: 0;
+          margin-right: 2px;
 
           &:before {
             content: '';
             display: block;
             background: url('../images/sprites.png') no-repeat;
-            height: 37px;
-            margin: 0px auto 13px;
+            height: 50px;
+            margin: 0px auto;
           }
 
           &:hover {
@@ -271,10 +276,16 @@ a, a:hover, a:visited {
 
     .bottom-nav {
       display: inline-block;
+      margin-right: 1px;
+      margin-top: 0px;
+
+      ul.bottom-nav-options {
+        display: none;
+      }
 
       ul {
-        padding-top: 25px;
-        letter-spacing: -0.8px;
+        padding-top: 6px;
+        letter-spacing: -0.2px;
         display: inline-block;
       }
 
@@ -301,59 +312,15 @@ a, a:hover, a:visited {
         }
       }
 
-      a {
-        color: $lightBlue;
-        font: 18px bell_mtbold;
+      li.login.first {
+        padding-left: 11px;
       }
 
-      &:before,
-      &:after {
-        margin-top: 25px;
-        padding: 0;
-        content: '+';
-        font-size: 12px;
-        font-weight: bold;
-        color: $lightBlue;
-      }
+      li.login {
+        padding: 1px 15px 0px 0px;
 
-      &:before {
-        float: left;
-      }
-
-      &:after {
-        float: right;
-      }
-    }
-
-    .bottom-nav {
-      display: inline-block;
-
-      ul {
-        padding-top: 25px;
-        letter-spacing: -0.8px;
-        display: inline-block;
-      }
-
-      li {
-        float: left;
-        padding: 0px 22px 0px 0px;
-        display: inline-block;
-
-        &:after {
-          content: '.';
-          font-weight: bold;
-          vertical-align: bottom;
-          padding-left: 22px;
-          color: $lightBlue;
-        }
-
-        &.last:after {
-          content: '';
-          padding-left: 0;
-        }
-
-        &.first {
-          padding-left: 23px;
+        a {
+          font: 14px bell_mtbold;
         }
       }
 
@@ -364,7 +331,7 @@ a, a:hover, a:visited {
 
       &:before,
       &:after {
-        margin-top: 25px;
+        margin-top: 9px;
         padding: 0;
         content: '+';
         font-size: 12px;
