--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -8,11 +8,13 @@
   </nav>
 
   <nav class="bottom-nav">
-    <ul>
+    <ul class="bottom-nav-options">
       <li class="first"><a href="#">Add a book</a></li>
       <li><a href="#">Add a book series</a></li>
       <li class="last"><a href="#">Add a person</a></li>
     </ul>
+    <ul>
+      <li class="first last login"><a href="#">LOGIN</a></li>
+    </ul>
   </nav>
-
 </footer>
