--- a/jekyll/app/_scss/_homepage.scss
+++ b/jekyll/app/_scss/_homepage.scss
@@ -7,8 +7,9 @@
 
   .main-content {
     font-weight: bold;
-    letter-spacing: -0.4px;
+    letter-spacing: 0.6px;
     margin-bottom: 36px;
+    margin-left: 1px;
   }
 
   .search {
@@ -49,7 +50,7 @@
         border-radius: 24px;
         height: 46px;
         width: 100%;
-        padding: 0 10px 0 15px;
+        padding: 0 10px 0 13px;
         background-color: rgba(255, 255, 255, 0.4);
         font-size: 13px;
         letter-spacing: -0.6px;
@@ -73,12 +74,14 @@
 
   .tags-cloud-wrapper {
     margin-top: 44px;
-    margin-bottom: 77px;
+    margin-bottom: 78px;
 
     h3 {
       color: $lightBlue;
       font-family: bell_mtbold;
       font-weight: bold;
+      margin-right: 4px;
+      letter-spacing: 0.9px;
 
       &:before,
       &:after {
@@ -86,7 +89,7 @@
         display: inline-block;
         border-bottom: 1px solid $lightBlue;
         width: 38%;
-        padding-top: 12px;
+        padding-top: 11px;
 
         @media (max-width: 850px) {
           display: none;
