Fix the style in the book page.

--- a/jekyll/app/_includes/footer.html
+++ b/jekyll/app/_includes/footer.html
@@ -13,6 +13,8 @@
       <li><a href="#">Add a book series</a></li>
       <li class="last"><a href="#">Add a person</a></li>
     </ul>
+  </nav>
+  <nav class="bottom-nav">
     <ul>
       <li class="first last login"><a href="#">LOGIN</a></li>
     </ul>
