--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -108,7 +108,7 @@
               list-style-type: none;
             }
 
-            &.active a {
+             a:hover {
               color: $lightBlue;
             }
 
