--- a/jekyll/app/_scss/_book.scss
+++ b/jekyll/app/_scss/_book.scss
@@ -66,6 +66,7 @@
 
         .field-label {
           display: inline-block;
+          font-weight: normal;
 
           &.type-label {
             font-size: 16px;
@@ -73,7 +74,7 @@
           }
         }
 
-        .content {
+        .field-items {
           display: inline-block;
           font-weight: bold;
         }
